[gd_scene load_steps=2 format=3 uid="uid://c7gn815rcvud0"]

[ext_resource type="Script" path="res://Script/MatchScreen.gd" id="1"]

[node name="MatchScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.0
offset_top = -114.5
offset_right = 270.0
offset_bottom = 114.5

[node name="FindMatch" type="Control" parent="Panel"]
anchors_preset = 0
anchor_right = 1.0
offset_bottom = 104.0

[node name="Label" type="Label" parent="Panel/FindMatch"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -24.0
offset_right = 100.0
offset_bottom = 10.0
text = "Find match"

[node name="DisplayTimerFindMatch" type="Label" parent="Panel/FindMatch"]
visible = false
layout_mode = 0
offset_left = 205.0
offset_top = 36.5
offset_right = 346.0
offset_bottom = 50.5
text = "Finding a match 00:00"

[node name="TimerFindMatch" type="Timer" parent="Panel/FindMatch/DisplayTimerFindMatch"]

[node name="SearchButton" type="Button" parent="Panel/FindMatch"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -32.0
offset_right = -1.0
offset_bottom = 11.0
text = "Search"

[node name="CreateMatch" type="Control" parent="Panel"]
anchors_preset = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -37.5
offset_right = 2.0
offset_bottom = 32.5

[node name="Label" type="Label" parent="Panel/CreateMatch"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -9.0
offset_right = 150.0
offset_bottom = 25.0
text = "Create a private match"

[node name="CreateButton" type="Button" parent="Panel/CreateMatch"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -93.0
offset_top = -16.0
offset_right = -4.0
offset_bottom = 27.0
text = "Create"

[node name="JoinMatch" type="Control" parent="Panel"]
anchors_preset = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -85.0
offset_bottom = 1.0

[node name="Label" type="Label" parent="Panel/JoinMatch"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -13.0
offset_right = 101.0
offset_bottom = 21.0
text = "Join match"

[node name="JoinButton" type="Button" parent="Panel/JoinMatch"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -19.0
offset_right = -3.0
offset_bottom = 24.0
text = "Join"

[node name="IDMatchText" type="LineEdit" parent="Panel/JoinMatch"]
layout_mode = 0
offset_left = 109.0
offset_top = 28.0
offset_right = 410.0
offset_bottom = 68.0

[connection signal="pressed" from="Panel/FindMatch/SearchButton" to="." method="_on_SearchButton_pressed"]
